fix: add missing padding on Bundles and Builds pages (#1924)
Before:


https://github.com/user-attachments/assets/1a9a040e-f047-47dc-adcf-ffac35c1c9f1

--- a/assets/app/css/pages/builds.css
+++ b/assets/app/css/pages/builds.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--noora-spacing-6);
+  padding: var(--noora-spacing-7) var(--noora-spacing-5);
   & [data-part="widgets"] {
     display: flex;
     flex-direction: row;
